[220403]

Changed sd-plymouth to plymouth hook in mkinitcpio.conf
Allow other package archive formats
Tidy all code, tabs are now spaces
Use heredocs instead of echoing to arch-chroot

[200604]

Added qt5-styleplugins, requried for GTK-style theming for Qt since qt5-base 5.7.0
Bug fixes


[200531]

Added fuse2 to packages, as grub-silent requires it to compile
Added p7zip to support most archive formats
Removed redundant packages.txt


[200530]

Added LICENSE (GPL v3)
Added GPL heading to important scripts
Tidied up directory for initial Git commit
    - removed Precompiled_Packages
    - removed compressed monocleOS package
Included xlunch source code in package
Added README.md


[200512]

Added AppArmor support
Added DontZap to Xorg's ServerFlags
Added installation of specific drivers and microcode
    - support for nvidia, amdgpu/radeon, intel graphics
    - added early KMS. graphics drivers should be in initramfs
Improved modification of mkinitcpio.conf
    - allows kernel modules to be specified from installer
Removed close from "gtk-decoration-layout=menu:close"
    - Polybar handles window action buttons
Removed labels from Polybar by default
    - gives a cleaner, more modern look
    - ...aaaand removes issues for small screens
    - added option to add them back in Settings > Themes & Personalisation > Status Bar
Simplified logo
Added onboard and mousetweaks for on-screen keyboard support
    - added i3 shortcut to open onboard $mod+K
    - defaults are defined by gsettings on .firstBoot in monocleOS
Updated precompiled packages
    - grub-silent has patched missing unicode.pf2 so removed from package


[200227]

Replaced compton with picom
Updated precompiled packages
Tidied up some code
Improved installer fatal error checking


[191028]

Fixed major issue with sudo inside subshells where authentication was needed twice
    - echo -e "$password" | sudo -Sv specified in subshells to reauthenticate