@@ -26,7 +26,7 @@ function funcResetFormat {
     if [[ $1 = 1 ]]; then find /home/user -type f -print0 | xargs -0 shred -zu; fi # Other methods of secure deletion: chattr +s (potentially insecure), srm (most secure), wipe (only magnetic storage), and dd (very slow, for blocks)
     rm -rf /home/user/* /home/user/.*
     # System
-    systemctl stop org.cups.cupsd
+    systemctl stop cups
     rm -rf /etc/cups /var/log /var/spool
     $installer -S --noconfirm cups
     systemctl stop NetworkManager
