@@ -2,6 +2,9 @@
 
 Changed sd-plymouth to plymouth hook in mkinitcpio.conf
 Allow other package archive formats
+Disable metadata_csum_seed for boot partition
+    - See https://askubuntu.com/a/1131970
+cups systemd service renamed
 Tidy all code, tabs are now spaces
 Use heredocs instead of echoing to arch-chroot
 
